<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/e_mail_Id_main"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/e_mail_main_text"
        app:layout_constraintTop_toBottomOf="@+id/e_mail_Id_main"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/userId_main"
        app:layout_constraintEnd_toEndOf="@+id/userId_main"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/userId_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707"
        app:srcCompat="@mipmap/yamda"
        android:contentDescription="@string/content_descrpition" />

    <TextView
        android:id="@+id/user_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userid_text"
        app:layout_constraintBottom_toBottomOf="@+id/userId_main"
        app:layout_constraintEnd_toStartOf="@+id/userId_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userId_main" />

    <TextView
        android:id="@+id/e_mail_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text"
        app:layout_constraintBottom_toBottomOf="@+id/e_mail_Id_main"
        app:layout_constraintEnd_toStartOf="@+id/e_mail_Id_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/e_mail_Id_main" />

    <TextView
        android:id="@+id/e_mail_Id_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/userId_main"
        app:layout_constraintStart_toStartOf="@+id/userId_main"
        app:layout_constraintTop_toBottomOf="@+id/userId_main" />

    <TextView
        android:id="@+id/userId_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>